# otus_cpp_03_sfinae

./: CMakeLists.txt  README.md  annotated.html  classes.html  classt__work__obj-members.html  classt__work__obj.html  dir_000007_000006.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7192a75d7ed6299360d83629a05af9d4.html  dir_9f7f68dfc5ba46883d743c6064dfe9cf.html  dir_ad3ee14fc1470be5931d8d70c36a2c34.html  dir_c424ae00010b0db7a2c97e2551eb1847.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp_8o_8d.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  print__any__ip_8h.html  print__any__ip_8h__dep__incl.map  print__any__ip_8h__dep__incl.md5  print__any__ip_8h__incl.map  print__any__ip_8h__incl.md5  print__any__ip_8h_source.html  work__obj_8cpp.html  work__obj_8cpp_8o_8d.html  work__obj_8cpp__incl.map  work__obj_8cpp__incl.md5  work__obj_8h.html  (+3 more)
.github/workflows/: actions_config.yml
include/: print_any_ip.h
search/: all_0.js  all_9.js  classes_0.js  files_2.js  functions_0.js  functions_2.js  pages_0.js  searchdata.js
src/: main.cpp  work_obj.cpp  work_obj.h
